# OpenGL-MiniEngine

./: .gitignore  CMakeLists.txt  Camera.cpp  Camera.h  Computer Graphics Lab 1.sln  Computer Graphics Lab 1.vcxproj  Computer Graphics Lab 1.vcxproj.filters  Light.h  Main.cpp  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Shader.cpp  Shader.h  Texture.h  glad.c  imgui.ini  skybox_vertex.glsl
Computer.5DBDB477/x64/Debug/: Computer Graphics Lab 1.exe.recipe  Computer Graphics Lab 1.vcxproj.FileListAbsolute.txt  vc143.idb
Libraries/Include/glad/: glad.h
Libraries/Lib/: assimp-vc143-mt.lib  glad.lib  glfw3.lib  glm.lib  kubazip.lib  minizip.lib  poly2tri.lib  polyclipping.lib  pugixml.lib
resources/models/: color.mtl  ladder.glb  scene.gltf  sword_test.glb  t.glb  tm.glb
resources/models/planets/: 1.glb  2.glb  3.glb  4.glb  5.glb  6.glb  7.glb  8.glb  9.glb  (+3 more)
resources/projectModels/: TnC.glb  allfern.glb  alltree.glb  bar.glb  bench.glb  bin.glb  clouds.glb  faountain1.glb  fern.glb  foodbench.glb  fountain.glb  gate.glb  ground.glb  lamp.glb  lamps.glb  mountain.glb  path.glb  sandbox.glb  shelter.glb  shelter1.glb  shelterbench.glb  shop.glb  slide.glb  swing.glb  swingbench.glb  terrain.glb  tree1.glb  tree2.glb  tree3.glb  tree4.glb  umbrella.glb  wall.glb  water.glb
saves/: aleena.json  finalscene.json  ladder.json  planets.json  testScene.json
shaders/: fragment_shader.glsl  skybox_fragment.glsl  skybox_vertex.glsl  vertex_shader.glsl
x64/Debug/: Computer Graphics Lab 1.exe.recipe  Computer Graphics Lab 1.vcxproj.FileListAbsolute.txt  vc142.idb  vc143.idb
(+18 files in other folders)
